--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +18,7 @@
         android:theme="@style/Theme.RegistrationApp"
         tools:targetApi="31">
         <activity
-            android:name=".PreviewActivity"
+            android:name=".RegistrationActivity"
             android:exported="true"
             android:label="Registration Message Preview"
             android:parentActivityName=".MainActivity" />
